minor updates, changed height of navbar, margin to title h2, fix on collapse event in navbar

--- a/client/src/components/AboutMe/style.css
+++ b/client/src/components/AboutMe/style.css
@@ -159,4 +159,7 @@ ul {
         padding: 40px 0 0 0;
         
     }
+    .Title {
+        margin-top: 20px;
+    }
   }
